# SLMengineer

./: .gitignore  Dockerfile  GS_run.sh  README.md  ai_slm_loop.sh  hamamatsu_test_config.json  loop_monitor.bat  optimization.qmd  push_run.ps1  push_run.sh  pyproject.toml  run_in_session1.bat  slmrun.bat
app/: slm_app.py
docs/: algorithms.md  api.md  cgm_implementation.md  examples.md  sweeping_sheet.md
processing/: bmp_to_color.py
references/: WGS.tex  ms.tex  top-hat.tex
scripts/: analyze_sweep.py  analyze_tophat_uniformity.py  camera_roi.py  demo_cgm_lg_mode.py  demo_cgm_tophat.py  demo_feedback.py  demo_gs.py  demo_hardware_capture.py  demo_hardware_feedback.py  demo_transforms.py  demo_wgs.py  draft.py  find_optimal_sigma.py  find_optimal_tophat.py  generate_hologram.py  reproduce_bowman.py  reproduce_kim.py  sweep_tophat.py  sweep_tophat.sh  test_issue11.py  test_lg_simulation.py  test_tophat.py  testfile.py  testfile_cgm.py  testfile_gline.py  testfile_gline.sh  testfile_lg.py  testfile_lg.sh  testfile_ring.py  testfile_ring.sh  testfile_sheet.py  testfile_sheet.sh  testfile_tophat.py  testfile_tophat.sh
tests/: conftest.py  test_aberration.py  test_beams.py  test_bowman_targets.py  test_camera.py  test_camera_equivalence.py  test_cgm.py  test_cgm_jax.py  test_device.py  test_feedback.py  test_fresnel.py  test_generation.py  test_gs.py  test_hardware_camera.py  test_hardware_config.py  test_imgpy.py  test_initial_phase.py  test_kim_targets.py  test_lut.py  test_metrics.py  test_phase_convert.py  test_propagation.py  test_slm_cgm_class.py  test_targets.py  (+3 more)
(+224 files in other folders)
